get that JDK