@@ -1,2 +1,2 @@
 #!/usr/bin/env sh
-java -jar video-series-command.jar
+java --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED -jar video-series-command.jar
