@@ -1,2 +1,2 @@
 #!/usr/bin/env sh
-java -jar -Dspring.profiles.active=prod video-series-command.jar
+java --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED -jar -Dspring.profiles.active=prod video-series-command.jar
